Cleanup and docker setup
