# src/routes/authRoutes.js
@@ -4,5 +4,6 @@ import { login } from "../controllers/authController.js";
 const router = express.Router();
 
 router.post("/login", login);
+router.post("/logout", logout);
 
 export default router;
